# GalacticStochastic

./: .darglint  .gitignore  .pre-commit-config.yaml  .pylintrc  README  README.md  algebra_tools.py  binary_search_subs.py  coefficientsWDM_time_funcs.py  coefficientsWDM_time_helpers.py  config_helper.py  default_parameters.ini  default_parameters.toml  demo_likelihood.py  figure_out_data_load.ipynb  galactic_fit_helpers.py  galaxy_copy.py  global_const.py  global_file_index.py  instrument_noise.py  iteration_config.py  iterative_fit_helpers.py  iterative_fit_manager.py  likelihood_demo_parameters.toml  lisa_config.py  make_gb_time_compare_plot.py  make_gb_white_compare_plot.py  mcmc_params.py  mypy_test.py  parameters_default_12year.toml  process_galaxy_preliminary.py  process_galaxy_step2.py  pyproject.toml  ra_waveform_freq.py  ra_waveform_time.py  ruff.toml  run_gb_iterative.py  run_iterative_procedure.py  taylor_wdm_funcs.py  test_galactic_fit_helpers.py  (+6 more)
.claude/agent-shared/: audibility-artifact.md  conventions.md  handoff-protocol.md  handoff-report.schema.json  model-assignment-policy.md  run-manifest.template.yaml
.claude/agents/: contract-adversary.md  contract-approver.md  contract-clean-consolidation.md  contract-cleaner.md  contract-design-adversary.md  contract-reviser.md  contract-revision-verifier.md  contract-steering.md  contract-style-lint.md  contract-verbosity.md  impl-adjudicator.md  impl-builder.md  impl-intent-redteam.md  impl-repair-verifier.md  impl-repair.md  impl-reviewer.md
.claude/skills/contract-approver/: SKILL.md
.claude/skills/contract-clean-consolidation/: SKILL.md
.claude/skills/contract-clean-verifier/: SKILL.md
.claude/skills/contract-cleaner/: SKILL.md
.claude/skills/contract-design-adversary/: SKILL.md
.claude/skills/contract-reviser/: SKILL.md
.claude/skills/contract-revision-verifier/: SKILL.md
.claude/skills/contract-steering/: SKILL.md
.claude/skills/contract-style-lint/: SKILL.md
.claude/skills/contract-verbosity/: SKILL.md
.claude/tools/: contract_style_lint_scan.sh
.contracts/: cleaner_test_contract.md  cleaner_test_contract_ledger.md  implementation_contract_taylor_time_wavelet_optimized.md  implementation_contract_taylor_time_wavelet_optimized_amendment_1.md
.github/workflows/: build.yml  docstrings.yml  lint.yml  typecheck.yml
GalacticStochastic/: __init__.py  background_decomposition.py  config_helper.py  cosmic_data_helpers.py  galactic_fit_helpers.py  global_const.py  global_file_index.py  inclusion_state_manager.py  iteration_config.py  iterative_fit.py  iterative_fit_helpers.py  iterative_fit_manager.py  iterative_fit_state_machine.py  noise_manager.py  plot_creation_helpers.py  state_manager.py  testing_tools.py
GalacticStochastic/cli/: run_iterative_procedure.py
Galaxies/COSMIC_alpha25/: run_default_parameters_cosmic.toml
Galaxies/Galaxy1/: galaxy_binaries.hdf5  run_default_parameters.toml
Galaxies/GalaxyTestSprint/: parameters_1year.toml
LisaWaveformTools/: algebra_tools.py  binary_params_manager.py  chirplet_source_freq.py  chirplet_source_time.py  imrphenomd_waveform.py  instrument_noise.py  linear_frequency_source.py  linear_frequency_source_freq.py  lisa_config.py  noise_model.py  ra_waveform_freq.py  ra_waveform_time.py  source_params.py  spacecraft_objects.py  stationary_freq_source.py  stationary_source_waveform.py  stationary_time_source.py  taylorf2_freq_source.py  taylorf2_helpers.py
WaveletWaveforms/: chirplet_funcs.py  coefficientsWDM_time_funcs.py  coefficientsWDM_time_helpers.py  sparse_waveform_functions.py  sparse_wavelet_time.py  taylor_freq_coefficients.py  taylor_freq_wavelet_funcs.py  taylor_time_coefficients.py  taylor_time_wavelet_funcs.py  taylor_time_wavelet_optimized.py  taylor_wdm_funcs.py  wavelet_detector_waveforms.py  wdm_config.py
scripts/orchestrate/: README.md  launch-role.sh  pipeline_lib.py
speed_tests/: taylor_time_wavelet_optimized_speed_demo.py
tests/: galactic_fit_test_config1.ini  galactic_fit_test_config1.toml  generate_raantenna_test_outputs.py  known_raantenna_outputs.hdf5  ruff_test_failure.py  sobhb_test_parameters.toml  sparse_wdm_test_config1.toml  spectral_noise_test_config1.ini  spectral_noise_test_config1.toml  tdi_diagonal_consistency_config1.toml  test_algebra_tools.py  test_binary_load.py  test_chirplet_funcs.py  test_chirplet_linear_agreement.py  test_extract_ampphase.py  test_galactic_fit_helpers.py  test_imrphenomd.py  test_known_snr.py  test_ldc_verification_match.py  test_linear_frequency_waveform.py  test_noise_scaling.py  test_pipeline_lib_resolve.py  test_raantenna_inplace.py  test_snr_distribution.py  test_sparse_wdm_match.py  test_spectral_noise_generation.py  test_taylor_time_wavelet_optimized.py  test_taylorf2_agreement.py  test_tdi_diagonal_noise_consistency.py  test_time_tdi_ampphase.py  test_wavemaket.py  time_tdi_test_config1.toml  wavemaket_test_config1.toml  wavemaket_test_config2.toml
