[project]
name = "GalacticStochastic"
version = "0.0.1"
description = "Tool for getting galactic stochastic background for a given galaxy"
readme = "README.md"
authors = [
  { name="Matthew C. Digman", email="matthew.digman@vanderbilt.edu" }
]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.2",
    "scipy>=1.16",
    # numba 0.61.2 is the first release that supports numpy 2.2 (0.61.0 caps at <2.2)
    "numba>=0.61.2",
    "h5py>=3.14",
    "WDMWaveletTransforms",
]
requires-python = ">=3.12"

[project.optional-dependencies]
# Development / test tooling (pytest plus type stubs for the typed checks).
dev = ["pytest>=9.0", "h5py-stubs", "scipy-stubs"]
# COSMIC compatibility mode: loading/processing COSMIC population HDF5 catalogs
# (see GalacticStochastic/cosmic_data_helpers.py, imported behind an optional guard).
# astropy >=7.2 per the note in cosmic_data_helpers.py; both support Python 3.12.
cosmic = ["pandas>=2.1", "astropy>=7.2"]
# Plotting / figure-generation scripts (make_gb_*_compare_plot.py, plot_creation_helpers.py).
plots = ["matplotlib>=3.8"]
# PyIMRPhenomD is not yet published on PyPI, so it is kept optional for now.
# Install it from its own source, or via: pip install ".[imrphenomd]" once available.
imrphenomd = ["PyIMRPhenomD"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["GalacticStochastic*", "LisaWaveformTools*", "WaveletWaveforms*"]

[project.scripts]
run-galactic-stochastic-iterative = "GalacticStochastic.cli.run_iterative_procedure:main"

[tool.pyrefly]
# Used by the pyrefly-check pre-commit hook. The hook environment does not
# install the project's runtime deps, so treat them as Any when unresolved --
# this preserves the behavior of the old mypy hook's --ignore-missing-imports.
# (The standalone type-check CI still runs mypy.)
#
# Packages with usable type info are omitted so their real types are checked:
# numpy/matplotlib/pytest ship py.typed and scipy/h5py have stub packages, all
# installed for the hook via additional_dependencies in .pre-commit-config.yaml.
# The packages below stay ignored because no type info is installable in the
# isolated hook environment: numba/astropy/pandas ship no py.typed, and
# PyIMRPhenomD (which does ship py.typed) is not published on PyPI.
python-version = "3.12"
ignore-missing-imports = [
    "numba", "numba.*",
    "astropy", "astropy.*",
    "pandas", "pandas.*",
    "PyIMRPhenomD", "PyIMRPhenomD.*",
    "WDMWaveletTransforms", "WDMWaveletTransforms.*",
]

[tool.pydoclint]
# Docstring-signature linting (the maintained successor to the now-archived
# darglint). These options scope pydoclint to roughly the same rules darglint
# enforced -- argument, return-presence, and raises consistency for numpy-style
# docstrings -- by disabling the checks darglint does not perform:
#   check-return-types  -> off : darglint does not check return types (DOC203)
#   check-class-attributes -> off : darglint does not check class attrs (DOC60x)
#   allow-init-docstring -> on : darglint documents __init__ args in __init__,
#                                not the class docstring (DOC301)
# The stricter-than-darglint DOC105 (arg type-hint matching) and DOC503 (raises
# vs. `assert`) findings are intentionally left enabled.
style = "numpy"
check-return-types = false
check-class-attributes = false
allow-init-docstring = true
